@@ -201,7 +201,8 @@ enum gaim_event {
 	event_new_conversation,
 	event_set_info,
 	event_draw_menu,
-	event_im_displayed,
+	event_im_displayed_sent,
+	event_im_displayed_rcvd,
 	/* any others? it's easy to add... */
 };
 
